k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app.kubernetes.io/name: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: django
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django
    spec:
      containers:
      - name: django-container
        image: k8s-django:latest
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app.kubernetes.io/name: django
  ports:
    - name: app-listener
      port: 80
